Avoid doubled scrollbars in other tables than the WP table

--- a/app/assets/stylesheets/content/_table.sass
+++ b/app/assets/stylesheets/content/_table.sass
@@ -47,7 +47,7 @@ $input-elements: input, 'input.form--text-field', select, 'select.form--select',
 .generic-table--results-container
   height:       100%
   overflow:
-    x: auto
+    x: hidden
     y: auto
 
 .generic-table--action-buttons
@@ -138,6 +138,7 @@ table.generic-table
       padding:
         top:    0
         bottom: 0
+      font-weight: bold
 
   tbody
     tr
